# ezl

./: README.md  input.txt  main.py  output.txt  pyproject.toml  test.py  test_webhook.py
examples/: example_webhook.py  full_queue.py  main.py  or_condition.py
src/ezl/: __init__.py  core.py  go.py
tests/: conftest.py  test_backpressure.py  test_error_handling.py  test_full_queue.py  test_full_webhook_queue.py  test_task_kinds.py  test_webhook.py  test_worker_processing.py
