[project]
name = "py-ezl"
version = "0.3.0"
description = "Easy ETL"
readme = "README.md"
authors = [
    { name = "mohamad-tohidi", email = "the.mohammad.tohidi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "janus>=2.0.0",
    "rich>=14.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ezl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
