[project]
name = "py-ezl"
version = "0.4.4"
description = "Easy ETL"
readme = "README.md"
authors = [
    { name = "mohamad-tohidi", email = "the.mohammad.tohidi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ezl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
